--- a/EDL/dwnld-1.0.0-post.yaml
+++ b/EDL/dwnld-1.0.0-post.yaml
@@ -1038,11 +1038,9 @@
               type: "string"
     securitySchemes:
       default:
-        type: "oauth2"
-        flows:
-          implicit:
-            authorizationUrl: "https://test.com"
-            scopes: {}
+        type: apiKey
+        in: header
+        name: apikey
   x-wso2-auth-header: "apikey"
   x-wso2-cors:
     corsConfigurationEnabled: false
