--- a/EDL/search-1.0.0-post.yaml
+++ b/EDL/search-1.0.0-post.yaml
@@ -476,11 +476,9 @@
   components:
     securitySchemes:
       default:
-        type: "oauth2"
-        flows:
-          implicit:
-            authorizationUrl: "https://test.com"
-            scopes: {}
+        type: apiKey
+        in: header
+        name: apikey
   x-wso2-auth-header: "apikey"
   x-wso2-cors:
     corsConfigurationEnabled: false
