--- a/EDL/search-1.0.0-post.yaml
+++ b/EDL/search-1.0.0-post.yaml
@@ -192,6 +192,13 @@
             schema:
               type: "integer"
           -
+            name: "orbitdir"
+            in: query
+            description: 'eo:orbitDirection: Orbit direction, must be ASCENDING or DESCENDING'
+            required: false
+            schema:
+              type: "string"
+          -
             name: "fire"
             in: "query"
             description: "Fire detected"
